# Qt-MusicPlayer

./: CMakeLists.txt  Playlist.cpp  Playlist.h  README.md  Track.cpp  Track.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
